Added divs to represent all upcoming additions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Your updated portfolio should:
+
+    1. Display your full name, email, and phone number
+
     
+
+    3. Have a link to a downloadable PDF of your resume
+
+    4. Display at least 2 examples of student work from either deployed projects or homeworks. For each project, make sure you have the following:
+
+        * Project title
+
+        * Link to the deployed version
+
+        * Link to the GitHub repository
+
+        * Screenshot of the deployed application
+
+    5. Have a polished, mobile-responsive user interface. -->
+
+    <h1 id="nameEl">Senyo Ahadzie</h1>
+    <h2 id="emailEl">Senyo.E.Ahadzie@rice.edu</h2>
+    <h2 id="phoneEl">713-884-6474</h2>
+    <div id="resumeEl"></div>
+    <div id="projectIEl"></div>
+    <div id="projectIIEl"></div>
+    <div id="GithubEl"></div>
+    <div id="LinkedInEl"></div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
