--- a/githubPages.html
+++ b/githubPages.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- 2a. Have links to your GitHub profile and LinkedIn profile -->
+    <p align="center">
+        <iframe id="Bubbles"
+            title="Bubbles"
+            width="70%"
+            height="250"
+        src="https://github.com/SenyoAhadzie">
+        </iframe>
+        </p>
+    <!-- <div> 
+        <object type="text/html" data="https://github.com/SenyoAhadzie" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
+        </object>
+     </div>
+     <div> 
+        <object type="text/html" data="https://stackoverflow.com/questions/39102215/how-to-show-external-website-inside-another-page-without-iframe" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
+        </object>
+     </div>
+
+     <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="index.html">1</a></li>
+          <li class="page-item"><a class="page-link" href="githubPages.html">2</a></li>
+          <li class="page-item"><a class="page-link" href="linkedInns.html">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <script>
+        //   document.cookie = "user=John; secure; SameSite=strict";
+        document.cookie = 'auth=lol;samesite=strict';
+      </script> -->
+      <script>
+        //   document.cookie = 'cross-site-cookie=bar; Secure; SameSite=None';
+        document.cookie = "cross-site-cookie=bar; SameSite=None; Secure"
+      </script>
+     
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
