Fixed improper iframe call

--- a/githubPages.html
+++ b/githubPages.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <!-- 2a. Have links to your GitHub profile and LinkedIn profile -->
-    <p align="center">
+    <!-- <p align="center">
         <iframe id="Bubbles"
             title="Bubbles"
             width="70%"
             height="250"
         src="https://github.com/SenyoAhadzie">
         </iframe>
-        </p>
-    <!-- <div> 
+        </p> -->
+     <div> 
         <object type="text/html" data="https://github.com/SenyoAhadzie" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
         </object>
      </div>
-     <div> 
+     <!--<div> 
         <object type="text/html" data="https://stackoverflow.com/questions/39102215/how-to-show-external-website-inside-another-page-without-iframe" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
         </object>
      </div>
