--- a/githubPages.html
+++ b/githubPages.html
@@ -50,6 +50,26 @@
       <script>
         //   document.cookie = 'cross-site-cookie=bar; Secure; SameSite=None';
         document.cookie = "cross-site-cookie=bar; SameSite=None; Secure"
+        function clearCookies(){
+            var cookies = document.cookie.split(';');
+            for(i in cookies){
+                var vals = cookies[i].split('=');
+                var name = vals.shift(0, 1).trim();
+                document.cookie = name+'=';
+            }
+        }
+        function parseCookies(cookie){
+            clearCookies();
+            var cookies = cookie.split(';');
+            for(i in cookies){
+                var vals = cookies[i].split('=');
+                var name = vals.shift(0, 1).trim();
+                document.cookie = name+'='+vals.join('=');
+            }
+        }
+
+        clearCookies();
+        parseCookies('SameSite=None Secure cross-site-cookie=bar');
       </script>
      
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
