Added debugger for testing

--- a/githubPages.html
+++ b/githubPages.html
@@ -50,6 +50,7 @@
       <script>
         //   document.cookie = 'cross-site-cookie=bar; Secure; SameSite=None';
         document.cookie = "cross-site-cookie=bar; SameSite=None; Secure"
+        debugger;
         function clearCookies(){
             var cookies = document.cookie.split(';');
             for(i in cookies){
