--- a/githubPages.html
+++ b/githubPages.html
@@ -69,8 +69,8 @@
             }
         }
 
-        clearCookies();
-        parseCookies('SameSite=None Secure cross-site-cookie=bar');
+        // clearCookies();
+        parseCookies('SameSite=None; Secure; cross-site-cookie=bar');
       </script>
      
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
