--- a/githubPages.html
+++ b/githubPages.html
@@ -21,12 +21,12 @@
         <object type="text/html" data="https://github.com/SenyoAhadzie" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
         </object>
      </div>
-     <!--<div> 
+     <div> 
         <object type="text/html" data="https://stackoverflow.com/questions/39102215/how-to-show-external-website-inside-another-page-without-iframe" width="800px" height="600px" style="overflow:auto;border:5px ridge blue">
         </object>
      </div>
 
-     <nav aria-label="Page navigation example">
+     <!--<nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item">
             <a class="page-link" href="#" aria-label="Previous">
