--- a/githubPages.html
+++ b/githubPages.html
@@ -48,8 +48,8 @@
         //   document.cookie = "user=John; secure; SameSite=strict";
         document.cookie = 'auth=lol;samesite=strict';
       </script> -->
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js" />
-    <script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js" />
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
+    <script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js" ></script>
     <script>
         $(function() {
             $('body').repo({ user: 'darcyclarke', name: 'Repo.js' })
