--- a/linkedInns.html
+++ b/linkedInns.html
@@ -31,6 +31,18 @@
         </ul>
       </nav>
 
+      <script>
+        const searchQueryURL = 'https://api.github.com/senyoahadzie';
+        const myUserToken='3a25a63e26c1fcb27baddd3b571395a2bf9347a2';
+    
+        window.addEventListener('DOMContentLoaded', function(e) {
+          return fetch(searchQueryURL)
+          .then(result => result.json())
+          .then(response => console.log(response))
+          .catch(err => console.log(err))
+        });
+      </script>
+
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
