Changed test searchQueryURL call

--- a/linkedInns.html
+++ b/linkedInns.html
@@ -32,7 +32,7 @@
       </nav>
 
       <script>
-        const searchQueryURL = 'https://api.github.com/senyoahadzie';
+        const searchQueryURL = 'https://api.github.com/users/senyoahadzie';
         const myUserToken='3a25a63e26c1fcb27baddd3b571395a2bf9347a2';
     
         window.addEventListener('DOMContentLoaded', function(e) {
