--- a/linkedInns.html
+++ b/linkedInns.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -41,6 +42,14 @@
           .then(response => console.log(response))
           .catch(err => console.log(err))
         });
+
+        $.ajax({
+      url:"https://api.github.com/users/senyoahadzie",
+      dataType: "jsonp",
+      success : function( response )
+      {
+        console.log(response);
+      }});
       </script>
 
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
