--- a/githubPages.html
+++ b/githubPages.html
@@ -49,12 +49,12 @@
         document.cookie = 'auth=lol;samesite=strict';
       </script> -->
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" ></script>
-    <script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js" ></script>
-    <script>
+    <!-- <script src="https://raw.githubusercontent.com/darcyclarke/Repo.js/master/repo.min.js" ></script> -->
+    <!-- <script>
         $(function() {
             $('body').repo({ user: 'darcyclarke', name: 'Repo.js' })
         });
-    </script> 
+    </script>  -->
       <script>
         //   document.cookie = 'cross-site-cookie=bar; Secure; SameSite=None';
         document.cookie = "cross-site-cookie=bar; SameSite=None; Secure"
